# Custom-Export-Panel

./: .gitignore  CMakeLists.txt  INSTRUCCIONES_FINALES.md  README.md  RELEASES.md  analyze_deps.bat  analyze_plugin.bat  check_deps.bat  check_lib.bat  check_obj.bat  compile.bat  compile.ps1  compile_final.bat  compile_quick.bat  compile_v2.bat  debug_dll.bat  debug_lib.bat  dll_info.txt  export_config.ini.example  gen_libs.ps1  install_clean.bat  install_plugin.bat  install_plugin_ui.bat  install_simple.bat  textos
.github/workflows/: build-and-release.yml
include/: obsconfig.h
libs/: Qt6Core.def  Qt6Core.exp  Qt6Core.lib  Qt6Gui.def  Qt6Gui.exp  Qt6Gui.lib  Qt6Widgets.def  Qt6Widgets.exp  Qt6Widgets.lib  exports_Qt6Core.txt  exports_Qt6Gui.txt  exports_Qt6Widgets.txt  exports_obs-frontend-api.txt  exports_obs.txt  obs-frontend-api.def  obs-frontend-api.exp  obs-frontend-api.lib  obs.def  obs.exp  obs.lib
src/: custom-export-dock.cpp  custom-export-dock.hpp  plugin-main-simple.cpp  plugin-main.cpp
